# semper_ai

./: .env.example  .gitignore  .replit  README.md  docker-compose.yml  pnpm-lock.yaml  replit.md  tsconfig.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py
apps/web/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
artifacts/api-server/: build.mjs  package.json  tsconfig.json  vitest.config.ts
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: index.ts
artifacts/brief-drafter/: index.html  package.json
artifacts/brief-drafter/.replit-artifact/: artifact.toml
artifacts/brief-drafter/src/: App.tsx
artifacts/context-echo/: index.html  package.json
artifacts/context-echo/.replit-artifact/: artifact.toml
artifacts/context-echo/src/: App.tsx
artifacts/marketplace/: index.html  package.json
artifacts/marketplace/.replit-artifact/: artifact.toml
artifacts/mission-chat/: index.html  package.json
attached_assets/: Pasted-Fix-Mission-Chat-Reply-failed-Invalid-request-when-send_1777475925634.txt  Pasted-Mission-Chat-Reply-failed-Invalid-request-and-transient_1777475553708.txt  Pasted-Role-Purpose-You-are-an-automated-Semantic-NLP-Evaluato_1777387512277.txt  Pasted-SEMPER-AI-Core-Use-Case-Orienting-AI-Tools-with-Marine-_1777472147944.txt
docs/compliance/: nist-800-53-mapping.md
infra/caddy/: Caddyfile
infra/postgres/: init.sql
lib/api-spec/: openapi.yaml
lib/db/: package.json
lib/mil-data/: package.json
(+90 files in other folders)
